app/assets/css/form.css
.section-header {
  display: flex;
  align-items: center;
  gap: 1rem;
  margin-bottom: 2rem;
}

.icon-wrapper {
  background-color: #ececec4d;
  width: 2rem;
  height: 2rem;
  border-radius: 0.25rem;
  border: 1px solid #ececec;
  display: flex;
  align-items: center;
  justify-content: center;
}

.section-icon {
  width: 18px;
  height: 20px;
}

.section-title {
  color: var(--text-primary);
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
}

.form-grid {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 16px 40px;
}

.form-group {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.full-grid {
  grid-column: span 2;
}

.form-label {
  color: var(--text-primary);
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  display: flex;
  align-items: center;
  gap: 0.25rem;
}

.input-wrapper {
  width: 100%;
  position: relative;
}

input,
select,
textarea {
  color: var(--text-primary);
  width: 100%;
  height: 48px;
  background: transparent;
  padding: 12px;
  border: 1px solid #ececec;
  border-radius: 4px;
  font-size: 14px;
  outline: none;
  resize: none;
}

.input-wrapper.has-end input {
  padding-right: 2.5rem;
}

.input-end {
  position: absolute;
  width: 2.5rem;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  display: flex;
  align-items: center;
  padding-left: 0.5rem;
}

input::placeholder,
select:invalid,
textarea::placeholder {
  color: #2a2a4899;
  font-family: var(--font-primary);
}

select:disabled {
  background-color: #ececec4d;
  color: #2a2a4899;
}

textarea {
  height: auto;
}

.hint {
  font-size: 12px;
  font-weight: 300;
  color: #2a2a4899;
}

.required-note {
  font-size: 14px;
  font-weight: 300;
  color: var(--text-light);
}

.form-footer {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.submit-btn {
  width: 100%;
  background-color: var(--color-secondary);
  color: #fff;
  padding: 0.5rem 1rem;
  border: none;
  border-radius: 0.25rem;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
  text-transform: uppercase;
  outline: none;
  transition: background-color 0.3s;
}

.submit-btn:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.submit-btn:hover {
  background-color: var(--color-secondary-dark);
}

@media screen and (max-width: 560px) {
  .form-grid {
    grid-template-columns: repeat(1, 1fr);
  }

  .form-group.full {
    grid-column: span 1;
  }
}

